--- a/fastapi_evals_project/requirements.txt
+++ b/fastapi_evals_project/requirements.txt
@@ -1,9 +1,11 @@
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
-httpx==0.24.1
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+httpx==0.26.0
 pandas==2.2.3
 openpyxl==3.1.5
 python-multipart==0.0.6
 aiofiles==23.1.0
-pydantic==1.10.12
+pydantic==2.5.3
+pydantic-settings==2.1.0
 python-dotenv==1.0.0
+pymongo
